# pointnet_livox

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: pointnet_segmentation.launch
rviz/: pointnet_visualization.rviz
scripts/: run_pointnet_node.py
src/: evaluate_final.py  train.py
src/data/: preprocessing.py
src/ros/: __init__.py  inference_engine.py  pointcloud_converter.py  pointnet_ros_node.py
src/utils/: metrics.py  training.py  visualization.py
