<?xml version="1.0"?>
<package format="2">
  <name>pointnet_s3dis</name>
  <version>1.0.0</version>
  <description>PointNet semantic segmentation for S3DIS indoor scenes with ROS integration</description>
  
  <maintainer email="haojiechen1234@gmail.com">haojiechen</maintainer>
  <license>MIT</license>
  
  <author>haojiechen</author>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Python 3 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
  </export>
</package>
